--- a/example/index.html
+++ b/example/index.html
@@ -7,53 +7,77 @@
 
     <title>Phaser Advertisement example</title>
 
+    <script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
+
     <!-- Include Phaser Crisp Text JS -->
     <script type="text/javascript" src="../node_modules/phaser/build/phaser.js"></script>
     <script type="text/javascript" src="../build/phaser-ads.js"></script>
 
     <style type="text/css">
         body {
-            margin: 0;
+            margin: 0 auto;
             padding: 0;
         }
 
-        canvas {
-            box-shadow: 0px 0px 5px black;
-            margin: 20px auto;
+        #game-container, #ad-container {
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            width: 800px;
+            height: 600px;
         }
     </style>
 
     <!-- Game we want to track -->
     <script type="text/javascript">
-        var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { create: create, preload: preload, resize: resize}, true);
+        var game = new Phaser.Game(800, 600, Phaser.AUTO, 'game-container', { create: create, preload: preload, resize: resize});
         Phaser.Device.whenReady(function () {
             game.plugins.add(Fabrique.Plugins.AdManager);
+            game.ads.setAdProvider(new Fabrique.AdProvider.AdSense(
+                game,
+                'game-container',
+                'ad-container',
+                'yourevasttaghere'
+            ));
         });
 
         function preload() {
-            if (!game.device.desktop) {
-                game.scale.setGameSize(window.innerWidth, window.innerHeight);
-                game.scale.setUserScale(window.innerWidth / 800, window.innerHeight / 600);
-            } else {
-                game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
-            }
+
         }
 
         function create(){
-            //let's add a nice background
-            var crispText = game.add.crispText(400, 300, 'This text is soo crisp!', {
-                font: '50px Arial',
-                fill: '#000000'
+            game.ads.onAdError.add(function (error) {
+               console.log('Something went wrong', error);
             });
-            crispText.anchor.set(0.5);
-            crispText.scale.set(1 / game.scale.grid.multiplier);
+
+            game.ads.onAdStarted.add(function () {
+                console.log('Started playing add');
+            });
+
+            game.ads.onAdReady.add(function () {
+                game.ads.showAd();
+            });
+
+            game.ads.onAdFinished.add(function () {
+                console.log('Finished playing add');
+            });
+
+            var text = game.add.text(game.width / 2, game.height / 2, 'If you see this, there is no Ad beeing displayed', {
+                font: '30px Arial',
+                fill: '#ffffff'
+            });
+            text.anchor.set(0.5);
         }
 
         function resize() {
-            console.log('reszied');
+            console.log('resized');
         }
     </script>
 </head>
 <body>
+<div id="content-wrapper">
+    <div id="game-container"></div>
+    <div id="ad-container"></div>
+</div>
 </body>
 </html>
