--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
 
     <title>Phaser Advertisement example</title>
 
-    <script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
+    <script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3_debug.js"></script>
 
     <!-- Include Phaser Crisp Text JS -->
     <script type="text/javascript" src="../node_modules/phaser/build/phaser.js"></script>
@@ -18,48 +18,52 @@
             margin: 0 auto;
             padding: 0;
         }
-
-        #game-container, #ad-container {
-            position: absolute;
-            top: 0px;
-            left: 0px;
-            width: 800px;
-            height: 600px;
-        }
     </style>
 
     <!-- Game we want to track -->
     <script type="text/javascript">
-        var game = new Phaser.Game(800, 600, Phaser.AUTO, 'game-container', { create: create, preload: preload, resize: resize});
+        var game = new Phaser.Game(800, 600, Phaser.AUTO, 'game-container', { init: init, create: create});
         Phaser.Device.whenReady(function () {
             game.plugins.add(Fabrique.Plugins.AdManager);
         });
 
-        function preload() {
-
+        function init() {
+            game.scale.scaleMode = Phaser.ScaleManager.RESIZE;
+            if (game.device.desktop) {
+                game.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
+                game.scale.pageAlignHorizontally = true;
+                game.scale.windowConstraints.bottom = 'visual'
+            }
+            game.scale.updateLayout();
         }
 
         function create(){
-            //Set the ad provider, we use google AdSense (ima 3 sdk)
-            game.ads.setAdProvider(new Fabrique.AdProvider.AdSense(
+            //Set the ad provider, we use google Ima3 (ima 3 sdk)
+            game.ads.setAdProvider(new Fabrique.AdProvider.Ima3(
                     game,
                     'game-container',
-                    'ad-container',
                     'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dskippablelinear&correlator='
             ));
 
             //Content paused event is fired when the content (game) should be paused, and the ad will be played
             game.ads.onContentPaused.add(function () {
-                console.log('Started playing add');
+                console.error('Started playing add');
             });
 
             //This is fired when the ad is finished playing and the content (game) should be resumed
             game.ads.onContentResumed.add(function () {
-                console.log('Finished playing add');
+                console.error('Finished playing add');
             });
 
-            //This is how we request an add
-            game.ads.requestAd();
+            if (game.device.desktop) {
+                //This is how we request an ad for desktop
+                game.ads.requestAd();
+            } else {
+                //In mobile we need to activate it by user input
+                game.input.onTap.add(function () {
+                    game.ads.requestAd();
+                });
+            }
 
             //the actual game content, behind the ad
             var text = game.add.text(game.width / 2, game.height / 2, 'If you see this, there is no Ad beeing displayed', {
@@ -68,16 +72,11 @@
             });
             text.anchor.set(0.5);
         }
-
-        function resize() {
-            console.log('resized');
-        }
     </script>
 </head>
 <body>
 <div id="content-wrapper">
     <div id="game-container"></div>
-    <div id="ad-container"></div>
 </div>
 </body>
 </html>
