Made it works for iOS

--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
 
     <title>Phaser Advertisement example</title>
 
-    <script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3_debug.js"></script>
+    <script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
 
     <!-- Include Phaser Crisp Text JS -->
     <script type="text/javascript" src="../node_modules/phaser/build/phaser.js"></script>
