moved custom params to requestAd, so they can be different per ad request

--- a/example/index.html
+++ b/example/index.html
@@ -41,8 +41,7 @@
             //Set the ad provider, we use google Ima3 (ima 3 sdk)
             game.ads.setAdProvider(new Fabrique.AdProvider.Ima3(
                     game,
-                    'game-container',
-                    'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&cust_params=deployment%3Ddevsite%26sample_ct%3Dskippablelinear&correlator='
+                    'https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&iu=/124319096/external/single_ad_samples&ciu_szs=300x250&impl=s&gdfp_req=1&env=vp&output=vast&unviewed_position_start=1&correlator'
             ));
 
             //Content paused event is fired when the content (game) should be paused, and the ad will be played
@@ -57,11 +56,17 @@
 
             if (game.device.desktop) {
                 //This is how we request an ad for desktop
-                game.ads.requestAd();
+                game.ads.requestAd({
+                    deployment: 'devsite',
+                    sample_ct: 'skippablelinear'
+                });
             } else {
                 //In mobile we need to activate it by user input
                 game.input.onTap.add(function () {
-                    game.ads.requestAd();
+                    game.ads.requestAd({
+                        deployment: 'devsite',
+                        sample_ct: 'skippablelinear'
+                    });
                 });
             }
 
