Bit of logging and updated example to not use skippable linear ads for iphone

--- a/example/index.html
+++ b/example/index.html
@@ -74,7 +74,7 @@
                 game.input.onTap.add(function () {
                     game.ads.requestAd({
                         deployment: 'devsite',
-                        sample_ct: 'skippablelinear'
+                        sample_ct: (this.game.device.iPhone) ? 'linear' : 'skippablelinear' //Iphone doesnt support skippable videos
                     });
                 });
             }
