--- a/example/index.html
+++ b/example/index.html
@@ -22,7 +22,7 @@
 
     <!-- Game we want to track -->
     <script type="text/javascript">
-        var game = new Phaser.Game(800, 600, Phaser.AUTO, 'game-container', { init: init, create: create});
+        var game = new Phaser.Game(800, 600, Phaser.AUTO, 'game-container', { init: init, create: create, preload: preload});
         Phaser.Device.whenReady(function () {
             game.plugins.add(Fabrique.Plugins.AdManager);
         });
@@ -37,7 +37,14 @@
             game.scale.updateLayout();
         }
 
+        function preload() {
+            game.load.audio('boden', 'bodenstaendig_2000_in_rock_4bit.ogg');
+        }
+
         function create(){
+            //Let's play this sound file so we can mute it later
+            game.sound.play('boden');
+
             //Set the ad provider, we use google Ima3 (ima 3 sdk)
             game.ads.setAdProvider(new Fabrique.AdProvider.Ima3(
                     game,
@@ -64,11 +71,14 @@
             });
 
             if (game.device.desktop) {
-                //This is how we request an ad for desktop
-                game.ads.requestAd({
-                    deployment: 'devsite',
-                    sample_ct: 'skippablelinear'
-                });
+                //Simple timeout to show sound will be muted behind an ad
+                setTimeout(function () {
+                    //This is how we request an ad for desktop
+                    game.ads.requestAd({
+                        deployment: 'devsite',
+                        sample_ct: 'skippablelinear'
+                    });
+                }, 1000);
             } else {
                 //In mobile we need to activate it by user input
                 game.input.onTap.add(function () {
