--- a/example/gamedistribution.html
+++ b/example/gamedistribution.html
@@ -7,12 +7,10 @@
 
     <title>Phaser Advertisement example</title>
 
-    <script type="text/javascript" src="//imasdk.googleapis.com/js/sdkloader/ima3.js"></script>
-
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.min.js"></script>
 
-    <!--<script type="text/javascript" src="//cnd.fbrq.io/phaser-ads/phaser-ads.min.js"></script>-->
-    <script type="text/javascript" src="../build/phaser-ads.js"></script>
+    <script type="text/javascript" src="//cnd.fbrq.io/phaser-ads/phaser-ads.min.js"></script>
+    <!--<script type="text/javascript" src="../build/phaser-ads.js"></script>-->
 
     <style type="text/css">
         body {
@@ -36,6 +34,8 @@
                 game.scale.windowConstraints.bottom = 'visual'
             }
             game.scale.updateLayout();
+            game.stage.disableVisibilityChange = true;
+            game.sound.muteOnPause = false;
 
             //Set the ad provider, we use google Ima3 (ima 3 sdk)
             game.ads.setAdProvider(new PhaserAds.AdProvider.GameDistributionAds(
@@ -77,6 +77,7 @@
             game.ads.onAdsDisabled.addOnce(function () {
                 console.error('Ads are being blocked.');
             });
+            game.sound.mute = true;
 
             //called when the button is clicked
             var showAd = function() {
