--- a/example/ima3.html
+++ b/example/ima3.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.6.2/phaser.min.js"></script>
 
     <script type="text/javascript" src="//cnd.fbrq.io/phaser-ads/phaser-ads.min.js"></script>
-    <!--<script type="text/javascript" src="./phaser-ads.js"></script>-->
+    <!--<script type="text/javascript" src="../build/phaser-ads.js"></script>-->
 
     <style type="text/css">
         body {
@@ -94,7 +94,7 @@
                 });
                 text.anchor.set(0.5);
 
-                var adsEnabled = game.ads.provider.areAdsEnabled();
+                var adsEnabled = game.ads.provider.adsEnabled;
                 if (adsEnabled) {
                     if (game.device.desktop) {
                         //This is how we request an ad for desktop
