Fixed content paused placement to make sure it's only fired when an actual ad is beeing displayed

--- a/example/gamedistribution.html
+++ b/example/gamedistribution.html
@@ -42,8 +42,8 @@
             //Set the ad provider, we use google Ima3 (ima 3 sdk)
             game.ads.setAdProvider(new PhaserAds.AdProvider.GameDistributionAds(
                 game,
-                '2d77cfd4b1e5487d998465c29de195b3', //Your game id goes here
-                'ABD36C6C-E74B-4BA7-BE87-0AB01F98D30D-s1'//Your user id goes here
+                'a1c4858cc2db451bb97c8e926257b49a', //Your game id goes here
+                ''//Your user id goes here
             ));
 
         }
